--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-calendar": "^3.2.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-material-ui-calendar": "^0.2.3",
     "react-router-dom": "^5.2.0",
